# Ooju

./: .gitignore  CHANGELOG.md  README.md  Upgradation.md  ooju_improvement_roadmap.html  planningpart1.txt  planningpart2.txt  pyproject.toml
editors/vscode/: LICENSE  README.md  language-configuration.json  ooju-vscode-0.1.0.vsix  package-lock.json  package.json
editors/vscode/syntaxes/: ooju.tmLanguage.json
examples/: assamese_script.oj  chat.oj  chat_test.oj  comments.oj  comments.py  fibonacci.oj  hello.oj  loops.oj  number_report.oj  number_report.py
ooju/: __init__.py  cli.py  codegen.py  parser.py  repl.py  stdlib.py  tokenizer.py  transpiler.py
ooju/cli/: main.py  repl.py
ooju/core/: codegen.py  parser.py  tokenizer.py  transpiler.py
tests/: test_cli.py  test_stress.py  test_transpiler.py
