[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ooju"
version = "1.0.0"
description = "A beginner-friendly programming language in Assamese."
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
ooju = "ooju.cli:main"

[tool.setuptools.packages.find]
include = ["ooju*"]
