[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ooju"
version = "1.0.0"
description = "A beginner-friendly programming language in Assamese — transpiles to Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = []

authors = [
  { name = "Prabal Gogoi" }
]

keywords = ["ooju", "assamese", "programming language", "transpiler", "education", "beginner"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/Prabaaal/Ooju"
Repository = "https://github.com/Prabaaal/Ooju"
"Bug Tracker" = "https://github.com/Prabaaal/Ooju/issues"

[project.scripts]
ooju = "ooju.cli:main"

[tool.setuptools.packages.find]
include = ["ooju*"]
